[gd_scene load_steps=2 format=3 uid="uid://cg3hylang5fxn"]

[ext_resource type="Script" path="res://main.gd" id="1_j0gfq"]

[node name="Main" type="Node2D"]
script = ExtResource("1_j0gfq")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ButtonHelloWorld" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.035
anchor_top = 0.065
anchor_right = 0.254972
anchor_bottom = 0.17
offset_left = -0.32
offset_top = -0.120003
offset_right = 0.271973
offset_bottom = -0.160004
grow_horizontal = 2
grow_vertical = 2
text = "Hello World"
metadata/_edit_use_anchors_ = true

[node name="ButtonInitIronSource" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.035
anchor_top = 0.247
anchor_right = 0.257
anchor_bottom = 0.343
offset_left = -0.32
offset_top = -0.0559998
offset_right = -0.0639954
offset_bottom = -0.264023
grow_horizontal = 2
grow_vertical = 2
text = "IronSource Init"

[node name="ButtonInterstitial" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.310903
anchor_top = 0.065
anchor_right = 0.550014
anchor_bottom = 0.16
offset_left = -0.160004
offset_top = -0.120003
offset_right = 0.383972
offset_bottom = 0.319992
grow_horizontal = 2
grow_vertical = 2
text = "Show Interstitial"
metadata/_edit_use_anchors_ = true

[node name="ButtonInterstitialAvailable" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.592014
anchor_top = 0.0552222
anchor_right = 0.772
anchor_bottom = 0.164951
offset_top = 0.215996
offset_right = -0.343994
offset_bottom = 0.111992
text = "Is Interstitial Ready ?"
metadata/_edit_use_anchors_ = true

[node name="ButtonSubmit" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.65
anchor_top = 0.813
anchor_right = 0.924
anchor_bottom = 0.909
offset_left = 0.199951
offset_top = 0.175964
offset_right = -0.447998
offset_bottom = -0.0320435
grow_horizontal = 2
grow_vertical = 2
text = "Submit
"

[node name="ButtonReward" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.301
anchor_top = 0.247
anchor_right = 0.556
anchor_bottom = 0.343
offset_left = 0.247955
offset_top = -0.0559998
offset_right = -0.512085
offset_bottom = -0.264023
grow_horizontal = 2
grow_vertical = 2
text = "Show Reward"

[node name="ButtonGetInteger" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.301
anchor_top = 0.483
anchor_right = 0.556
anchor_bottom = 0.579
offset_left = 0.247955
offset_top = 0.0159912
offset_right = -0.512085
offset_bottom = -0.192078
grow_horizontal = 2
grow_vertical = 2
text = "get Integer Value"

[node name="ButtonGetBool" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.0388473
anchor_top = 0.483
anchor_right = 0.266938
anchor_bottom = 0.579
offset_left = 0.247955
offset_top = 0.0159912
offset_right = -0.512085
offset_bottom = -0.192078
grow_horizontal = 2
grow_vertical = 2
text = "get Bool"
metadata/_edit_use_anchors_ = true

[node name="PanelStepper" type="Panel" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.594
anchor_top = 0.233
anchor_right = 0.965
anchor_bottom = 0.549
offset_left = -0.288025
offset_top = 0.0159912
offset_right = 0.319946
offset_bottom = 0.247986

[node name="TextEdit" type="TextEdit" parent="CanvasLayer/PanelStepper"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.252
anchor_top = 0.063
anchor_right = 0.708
anchor_bottom = 0.341
offset_left = 0.143997
offset_top = 0.085
offset_right = -0.0239868
offset_bottom = 0.0949936
theme_override_font_sizes/font_size = 21
text = "16"

[node name="ButtonPositive" type="Button" parent="CanvasLayer/PanelStepper"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.14
anchor_top = 0.5
anchor_right = 0.418
anchor_bottom = 0.79
offset_left = 0.079998
offset_top = 2.5
offset_right = 0.095993
offset_bottom = 0.0500031
text = "+"

[node name="ButtonNegative" type="Button" parent="CanvasLayer/PanelStepper"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.533
anchor_top = 0.512
anchor_right = 0.811
anchor_bottom = 0.79
offset_left = -0.124023
offset_top = 0.0399933
offset_right = -0.108032
offset_bottom = 0.0500031
text = "+"

[connection signal="pressed" from="CanvasLayer/ButtonHelloWorld" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonInitIronSource" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonInterstitial" to="." method="_on_button_interstitial_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonInterstitialAvailable" to="." method="_on_button_interstitial_available_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonSubmit" to="." method="_on_button_submit_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonReward" to="." method="_on_button_reward_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonGetInteger" to="." method="_on_button_get_integer_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonGetBool" to="." method="_on_button_get_bool_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelStepper/ButtonPositive" to="." method="_on_button_positive_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelStepper/ButtonNegative" to="." method="_on_button_negative_pressed"]
